Cleanup and show toast when Wifi Receiver completed
If train/sense is used before the wifi received is finished the results will be the same!

--- a/WhereAmI/app/src/main/res/values/strings.xml
+++ b/WhereAmI/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="confirm_reset_training_text">Samples successfully removed!</string>
     <string name="confirm_save_settings_text">Settings successfully saved!</string>
     <string name="error_not_enough_samples">At least 8 samples required</string>
+    <string name="confirm_wifi_receiver_completed">WiFi Receiver completed</string>
 
     <string name="view_home_title">WhereAmI</string>
     <string name="view_training_title">Training</string>
