--- a/WhereAmI/app/src/main/res/values/strings.xml
+++ b/WhereAmI/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="textview_label_method">Method</string>
     <string name="textview_label_precision">Precision</string>
     <string name="textview_label_reset">Reset training data</string>
+    <string name="textview_label_total_samples">Total training samples</string>
 
     <string name="dialog_reset_title">Are u sure?</string>
     <string name="dialog_reset_message">Do you want to reset all data?</string>
