--- a/WhereAmI/app/src/main/res/values/strings.xml
+++ b/WhereAmI/app/src/main/res/values/strings.xml
@@ -30,9 +30,9 @@
         <item>Cell H</item>
     </string-array>
     <string-array name="activity_array">
-        <item>Walking</item>
         <item>Standing</item>
-        <item>Being crazy</item>
+        <item>Walking</item>
+        <item>Swinging</item>
     </string-array>
     <string-array name="method_array">
         <item>KNN</item>
