Attempt to increase performance and stability compass

--- a/ParticleFilters/app/src/main/res/values/strings.xml
+++ b/ParticleFilters/app/src/main/res/values/strings.xml
@@ -42,6 +42,11 @@
         <item>3</item>
         <item>4</item>
         <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
     </string-array>
 
     <string-array name="steptime_array">
@@ -63,6 +68,11 @@
         <item>2000</item>
         <item>2500</item>
         <item>3000</item>
+        <item>3500</item>
+        <item>4000</item>
+        <item>4500</item>
+        <item>5000</item>
+        <item>10000</item>
     </string-array>
 
     <string name="view_home_title">ParticleFilters</string>
