Add options for low particle count

--- a/ParticleFilters/app/src/main/res/values/strings.xml
+++ b/ParticleFilters/app/src/main/res/values/strings.xml
@@ -63,6 +63,8 @@
     </string-array>
 
     <string-array name="particles_array">
+        <item>5</item>
+        <item>100</item>
         <item>1000</item>
         <item>1500</item>
         <item>2000</item>
